--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Rawan's Resturant</title>
+    <title>Nadia's Resturant</title>
   </head>
   <body>
     <h1>Welcome to Assignment 4 My resturant</h1>
